--- a/mnist/mnist_sample_mio.ipynb
+++ b/mnist/mnist_sample_mio.ipynb
@@ -9,17 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.4270922985076904\n",
-      "1 0.2640626178264618\n",
-      "2 0.22213245170116425\n",
-      "3 0.19952659080028534\n"
+      "0 0.43608020238876344\n",
+      "1 0.2648738523006439\n",
+      "2 0.23898386358022689\n",
+      "3 0.2452507713317871\n"
      ]
     }
    ],
@@ -122,7 +122,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -136,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
