--- a/timit/aux.ipynb
+++ b/timit/aux.ipynb
@@ -488,6 +488,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b1aca08a",
+   "metadata": {},
+   "source": [
+    "#### Reproducibilidad de los experimentos\n",
+    "Como fijar la semilla y aplicarla a todas las posibles variaciones aleatorias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d2713b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "import random # También para operaciones random de Python\n",
+    "\n",
+    "def set_seed(seed):\n",
+    "    torch.manual_seed(seed)\n",
+    "    torch.cuda.manual_seed(seed) # Para todas las GPUs\n",
+    "    torch.cuda.manual_seed_all(seed) # Para múltiples GPUs\n",
+    "    np.random.seed(seed)\n",
+    "    random.seed(seed)\n",
+    "    # Algunas operaciones de cuDNN pueden ser no deterministas, se recomienda esto:\n",
+    "    torch.backends.cudnn.deterministic = True\n",
+    "    torch.backends.cudnn.benchmark = False # Puede hacer que el entrenamiento sea más lento\n",
+    "\n",
+    "# Definir la semilla que usaremos\n",
+    "MY_SEED = 42\n",
+    "set_seed(MY_SEED)\n",
+    "\n",
+    "# Acá empieza el código de la aplicación"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "9086f9b4",
@@ -746,7 +783,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -760,7 +797,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
