--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "6bd4c865",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,9 @@
     "import torch\n",
     "import torch.utils.data as data\n",
     "import torchaudio\n",
-    "from matplotlib import pyplot as plt\n",
+    "from torch.nn.utils.rnn import pad_sequence\n",
+    "from torch.utils.data import  Dataset, DataLoader\n",
+    "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(device)"
    ]
@@ -46,34 +48,21 @@
    "metadata": {},
    "source": [
     "### Dataset\n",
-    "Me convierte los datos crudos para que puedan ser usados por `Dataloader`. Me permite implementar una fucnión `__getitem__()` en la cual leemos los datos y devolvemos por ejemplo el wav y la transcripción de cada dato."
+    "Me convierte los datos crudos para que puedan ser usados por `Dataloader`. Me permite implementar una función `__getitem__()` en la cual leemos los datos y devolvemos por ejemplo el wav y la transcripción de cada dato."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ccc0ee22",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'json' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 19\u001b[0m\n\u001b[1;32m     16\u001b[0m         phn \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdatos_json[key][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mphn\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     17\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m wavdir, duration, phn\n\u001b[0;32m---> 19\u001b[0m train_dataset \u001b[38;5;241m=\u001b[39m \u001b[43mTimitDataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_json\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     20\u001b[0m test_dataset \u001b[38;5;241m=\u001b[39m TimitDataset(test_json)\n\u001b[1;32m     21\u001b[0m valid_dataset \u001b[38;5;241m=\u001b[39m TimitDataset(valid_json)\n",
-      "Cell \u001b[0;32mIn[2], line 8\u001b[0m, in \u001b[0;36mTimitDataset.__init__\u001b[0;34m(self, json_file)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, json_file):\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(json_file, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m----> 8\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdatos_json \u001b[38;5;241m=\u001b[39m \u001b[43mjson\u001b[49m\u001b[38;5;241m.\u001b[39mload(f)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'json' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_json = 'data/train.json'\n",
     "test_json = 'data/test.json'\n",
     "valid_json = 'data/dev.json'\n",
     "\n",
-    "class TimitDataset():\n",
+    "class TimitDataset(Dataset):\n",
     "    def __init__(self, json_file):\n",
     "        with open(json_file, 'r') as f:\n",
     "            self.datos_json = json.load(f)\n",
@@ -86,20 +75,74 @@
     "        duration = self.datos_json[key]['duration']\n",
     "        phn = self.datos_json[key]['phn']\n",
     "        return wavdir, duration, phn\n",
-    "    \n",
-    "train_dataset = TimitDataset(train_json)\n",
-    "test_dataset = TimitDataset(test_json)\n",
-    "valid_dataset = TimitDataset(valid_json)\n",
     "\n",
-    "# Ejemplo de uso de Dataset           \n",
-    "wavdir, dur, phn = valid_dataset['mrws1_sx230']\n",
-    "        \n",
+    "def collate_fn(batch):\n",
+    "    # El batch es una lista de tuplas: [(dato1,label1), (dato2,label2),...]\n",
+    "    sequences, labels = zip(*batch) # Esto devuelve: \n",
+    "                                    # sequences = (dato1,dato2,...)\n",
+    "                                    # labels = (label1,label2,...)\n",
+    "    padded_sequences = pad_sequence(sequences, batch_first=True, padding_value=0)\n",
+    "    labels = torch.tensor(labels)\n",
+    "    return padded_sequences, labels # Esta es la salida del dataloader\n",
+    "   \n",
+    "train_ds = TimitDataset(train_json)\n",
+    "test_ds = TimitDataset(test_json)\n",
+    "valid_ds = TimitDataset(valid_json)\n",
+    "\n",
+    "train_dl = DataLoader(train_ds, batch_size=8, shuffle=True, collate_fn=collate_fn)\n",
+    "test_dl = DataLoader(train_ds, batch_size=16, shuffle=False, collate_fn=collate_fn)\n",
+    "valid_dl = DataLoader(train_ds, batch_size=16, shuffle=False, collate_fn=collate_fn)\n",
+    "\n",
+    "for batch in train_dl:\n",
+    "    print(batch[1])  # Imprime las etiquetas del batch\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "id": "3fff94f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.TimitDataset at 0x73d0d7546e70>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_ds[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2d5ed281",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "462"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dataloader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "cc8d874a",
    "metadata": {},
    "outputs": [
@@ -109,12 +152,13 @@
        "'sil ah l aw l iy w ey hh iy er sil b ah r ae sh sil n l ay z aa l eh r er z sil'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "wavdir, dur, phn = valid_dataset['mrws1_sx230']\n",
     "phn"
    ]
   },
